--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       # This step checks out a copy of your repository.
       - uses: actions/checkout@v2
       # run tree command
-      - name: tree
-        run: tree
+      - name: find
+        run: find .
       # This step references the directory that contains the action.
       - uses: ./github-actions-helloworld/.github/actions/
