--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,14 @@ jobs:
     steps:
       # This step checks out a copy of your repository.
       - uses: actions/checkout@v2
-      # run tree command
-      - name: find
-        run: find .
-      # This step references the directory that contains the action.
-      - uses: ./.github/actions/hello-world
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: check data.txt
+        run: |
+          echo data.txt
+          cat ./data.txt
+          echo ----- End -----
