--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       # Runs with a secert
       - name: tell me the secrets
         run: |
-          cat ${name} > secert.txt
+          echo ${name} > secert.txt
         env:
           name:  ${{ secrets.MY_NAME }}
       - name: display secrets
