--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,7 @@ jobs:
       - name: display secrets
         run: |
           cat ./secert.txt
+      - name: fail
+        run: |
+          cat aaa.txt
         
