--- a/.github/workflows/share-data.yml
+++ b/.github/workflows/share-data.yml
@@ -23,4 +23,27 @@ jobs:
         with:
           name: plus-result
           path: plus-result.txt  
-      - run: find . 
+      - run: |
+          find . 
+          cat plus-result.txt
+  multiply:
+    name: multiply
+    needs: plus
+    runs-on: windows-latest
+    steps:
+      - name: download plus result
+        uses: actions/download-artifact@v1
+        with:
+          name: plus-result
+      - shell: bash
+        run: |
+          value=`cat homework/math-homework.txt`
+          expr $value \* 9 > homework/math-homework.txt
+      - name: Upload multiply result for job 2
+        uses: actions/upload-artifact@v1
+        with:
+          name: plus-result
+          path: plus-result.txt  
+      - run: |
+          find . 
+          cat plus-result.txt
