--- a/.github/workflows/share-data.yml
+++ b/.github/workflows/share-data.yml
@@ -42,7 +42,7 @@ jobs:
       - name: upload multiply result
         uses: actions/upload-artifact@v1
         with:
-          name: plus-result/
+          name: plus-result
           path: plus-result/plus-result.txt  
       - run: |
           find . 
