--- a/.github/workflows/share-data.yml
+++ b/.github/workflows/share-data.yml
@@ -38,12 +38,13 @@ jobs:
       - shell: bash
         run: |
           value=`cat plus-result/plus-result.txt`
-          expr $value \* 9 > plus-result/plus-result.txt
+          expr $value \* 2 > plus-result/plus-result.txt
       - name: upload multiply result
         uses: actions/upload-artifact@v1
         with:
           name: plus-result
           path: plus-result/plus-result.txt  
-      - run: |
+      - shell: bash
+        run: |
           find . 
           cat ./plus-result/plus-result.txt
