--- a/.github/workflows/share-data.yml
+++ b/.github/workflows/share-data.yml
@@ -38,13 +38,13 @@ jobs:
       - shell: bash
         run: |
           value=`cat plus-result/plus-result.txt`
-          expr $value \* 2 > plus-result/plus-result.txt
+          expr $value \* 2 > multiply-result/multiply-result.txt
       - name: upload multiply result
         uses: actions/upload-artifact@v1
         with:
-          name: plus-result
-          path: plus-result/plus-result.txt  
+          name: multiply-result
+          path: multiply-result/multiply-result.txt
       - shell: bash
         run: |
           find . 
-          cat ./plus-result/plus-result.txt
+          cat ./multiply-result/multiply-result.txt
