--- a/.github/workflows/share-data.yml
+++ b/.github/workflows/share-data.yml
@@ -57,6 +57,7 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: multiply-result
-      - run: |
+      - name: display result
+        run: |
           find .
           cat ./multiply-result/multiply-result.txt
