dummy push for re run

--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -37,4 +37,6 @@ jobs:
         ./heavy.sh
 
     - name: output heavy
-      run: cat ./heavy.output
+      run: |
+        echo ------
+        cat ./heavy.output
