--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -26,7 +26,7 @@ jobs:
       id: cache-heavy
       uses: actions/cache@v1
       with:
-        path: cache
+        path: max
         key: ${{ runner.os }}-heavy-2
 
     # Runs a single command using the runners shell
