--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -27,7 +27,7 @@ jobs:
       uses: actions/cache@v1
       with:
         path: max
-        key: ${{ runner.os }}-heavy-2
+        key: ${{ runner.os }}-heavy
 
     # Runs a single command using the runners shell
     - name: heavy
