--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -26,8 +26,8 @@ jobs:
       id: cache-heavy
       uses: actions/cache@v1
       with:
-        path: max
-        key: ${{ runner.os }}-heavy
+        path: ./heavy
+        key: cache-heavy
 
     # Runs a single command using the runners shell
     - name: heavy
