--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -27,7 +27,7 @@ jobs:
       uses: actions/cache@v1
       with:
         path: ./heavy
-        key: cache-heavy
+        key: ${{ runner.os }}-cache-heavy
 
     # Runs a single command using the runners shell
     - name: heavy
