--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -41,4 +41,6 @@ jobs:
           ${{ runner.os }}-maven-
     - name: install
       if: steps.cache-numbers.outputs.cache-hit != 'true'
-      run: ./calc.sh
+      run: |
+        chmod +x ./calc.sh
+        ./calc.sh
