--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -29,7 +29,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
     - name: install
-      if: steps.cache-primes.outputs.cache-hit != 'true'
+      if: cache-primes.outputs.cache-hit != 'true'
       run: mvn install
 
     - uses: actions/cache@v1
@@ -40,7 +40,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
     - name: install
-      if: steps.cache-numbers.outputs.cache-hit != 'true'
+      if: cache-numbers.outputs.cache-hit != 'true'
       run: |
         chmod +x ./calc.sh
         ./calc.sh
