--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -28,7 +28,7 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: install
+    - name: maven install
       if: steps.cache-pom.outputs.cache-hit != 'true'
       run: mvn install
 
@@ -39,7 +39,7 @@ jobs:
         key: ${{ runner.os }}-numbers-${{ hashFiles('**/numbers') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: install
+    - name: calc result
       if: steps.cache-numbers.outputs.cache-hit != 'true'
       run: |
         chmod +x ./calc.sh
