--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -42,4 +42,6 @@ jobs:
         chmod +x ./calc.sh
         ./calc.sh
     - name: output result
-      run: cat result
+      run: |
+        find .
+        cat result
