--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -38,6 +38,7 @@ jobs:
         path: ./
         key: ${{ runner.os }}-numbers
     - name: calc result
+      if: steps.cache-numbers.outputs.cache-hit != 'true'
       run: |
         chmod +x ./calc.sh
         ./calc.sh > result
