--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -33,16 +33,16 @@ jobs:
       run: mvn install
 
     - uses: actions/cache@v1
-      id: cache-calc
+      id: cache-calc-1
       with:
-        path: ./calc
+        path: ./cache
         key: ${{ runner.os }}-numbers
     - name: calc result
-      if: steps.cache-calc.outputs.cache-hit != 'true'
+      if: steps.cache-calc-1.outputs.cache-hit != 'true'
       run: |
         chmod +x ./calc.sh
-        ./calc.sh > ./calc/result
+        ./calc.sh > ./cache/result
     - name: output result
       run: |
-        ls ./calc
-        cat ./calc/result
+        ls ./cache
+        cat ./cache/result
