--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -41,6 +41,7 @@ jobs:
       if: steps.cache-calc-1.outputs.cache-hit != 'true'
       run: |
         chmod +x ./calc.sh
+        mkdir cache
         ./calc.sh > ./cache/result
     - name: output result
       run: |
