--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -36,7 +36,7 @@ jobs:
       id: cache-calc-1
       with:
         path: ./cache
-        key: ${{ runner.os }}-numbers-1
+        key: ${{ runner.os }}-numbers-${{ hashFiles('**/numbers') }}
     - name: calc result
       if: steps.cache-calc-1.outputs.cache-hit != 'true'
       run: |
