--- a/.github/workflows/hello-world-docker.yml
+++ b/.github/workflows/hello-world-docker.yml
@@ -14,7 +14,7 @@ jobs:
         find .
     - name: Hello world action step
       id: hello
-      uses: .github/actions/hello-world-docker-action@v1
+      uses: .github/actions/hello-world-docker-action
       with:
         who-to-greet: 'Mona the Octocat'
     # Use the output from the `hello` step
