--- a/.github/actions/hello-world-docker-action/action.yml
+++ b/.github/actions/hello-world-docker-action/action.yml
@@ -1,16 +1,16 @@
 # action.yml
-name: 'Hello World'
-description: 'Greet someone and record the time'
+name: hello-world
+description: greeting
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
+  name:  # id of input
+    description: name
     required: true
-    default: 'World'
+    default: ''
 outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+  end-time: # id of output
+    description: execute end time
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: docker
+  image: Dockerfile
   args:
-    - ${{ inputs.who-to-greet }}
+    - ${{ inputs.name }}
