--- a/.github/workflows/hello-world-docker.yml
+++ b/.github/workflows/hello-world-docker.yml
@@ -2,16 +2,17 @@ name: hello-world-docker
 
 on:
   push:
+    branches: [ master ]
 
 jobs:
   hello-world:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+    # checkout
     - name: checkout
       uses: actions/checkout@v2
-    - run: |
-        find .
+    # use local action
     - name: hello-world-docker-action
       id: hello-world-docker-action
       uses: ./.github/actions/hello-world-docker-action
