--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -22,21 +22,21 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # use cache to cache dependencies
-    - uses: actions/cache@v1
-      # id for cache
-      id: cache-pom
-      with:
-        # directory for cache
-        path: ~/.m2/repository
-        # key for cache
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - name: maven install 
-      # skip if cache hit
-      if: steps.cache-pom.outputs.cache-hit != 'true'
-      run: mvn install
+#     # use cache to cache dependencies
+#     - uses: actions/cache@v1
+#       # id for cache
+#       id: cache-pom
+#       with:
+#         # directory for cache
+#         path: ~/.m2/repository
+#         # key for cache
+#         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+#         restore-keys: |
+#           ${{ runner.os }}-maven-
+#     - name: maven install 
+#       # skip if cache hit
+#       if: steps.cache-pom.outputs.cache-hit != 'true'
+#       run: mvn install
 
     - uses: actions/cache@v1
       id: cache-calc
