--- a/.github/workflows/test-java-maven.yml
+++ b/.github/workflows/test-java-maven.yml
@@ -18,11 +18,12 @@ jobs:
         with:
           java-version: 1.8
       # cache maven dependencies
-      - name: Cache Maven packages
+      - name: cache maven dependencies
         uses: actions/cache@v1
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+      # maven test, package
       - name: mavn build
-        run: mvn -B package --file pom.xml
+        run: mvn -B verify package --file pom.xml
