--- a/test-java-maven/pom.xml
+++ b/test-java-maven/pom.xml
@@ -6,11 +6,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<java.version>1.8</java.version>
 		<junit.version>5.4.2</junit.version>
-    		<maven.unit.test.version>2.22.0</maven.unit.test.version>
+    <maven.unit.test.version>2.22.0</maven.unit.test.version>
+    <maven-jar-plugin.version>3.0.2</maven-jar-plugin.verson>
 	</properties>
 
 	<dependencies>
@@ -36,6 +38,21 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven.unit.test.version}</version>
 			</plugin>
+			<plugin>
+        <!-- Build an executable JAR -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin}</version>
+				<configuration>
+          <archive>
+				    <manifest>
+				      <addClasspath>true</addClasspath>
+				      <classpathPrefix>lib/</classpathPrefix>
+				      <mainClass>com.dotterbear.helloworld.Main</mainClass>
+				    </manifest>
+					</archive>
+				</configuration>
+      </plugin>
 		</plugins>
 	</build>
 
