--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -1,4 +1,4 @@
-name: test python
+name: test-python
 
 on:
   push:
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r ./test-python/requirements.txt
     - name: Lint with flake8
       run: |
         pip install flake8
