--- a/.github/workflows/test-python.yml
+++ b/.github/workflows/test-python.yml
@@ -14,16 +14,19 @@ jobs:
       matrix:
         python-version: [3.5, 3.6, 3.7, 3.8]
 
+    # checkout
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    # install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r ./test-python/requirements.txt
+    # check syntax
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -31,7 +34,18 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    # run test
     - name: Test with pytest
       run: |
         pip install pytest
-        pytest ./test-python/test.py
+        pytest ./test-python/test.py --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+    # upload test result
+    - name: upload test result
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        # Artifact name
+        name: python-test-result-${{ matrix.python-version }}
+        # Directory containing files to upload
+        path: junit/test-results-${{ matrix.python-version }}.xml
+      if: always() 
+      
