--- a/.github/workflows/test-local.yml
+++ b/.github/workflows/test-local.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   hello-world:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     name: A job to say hello
     steps:
     # checkout
