--- a/.github/actions/foo-action/action.yml
+++ b/.github/actions/foo-action/action.yml
@@ -9,5 +9,7 @@ inputs:
 outputs:
   text: # id of output
     description: execute end time
-runs: ubuntu-latest
-run: echo hello world
+runs:
+  using: ubuntu-latest
+  run: echo hello
+
